--- a/Estudonauta/stilo.css
+++ b/Estudonauta/stilo.css
@@ -13,8 +13,9 @@ body {
 main {
     margin: auto;
     max-width: 800px;
-    background-color: fff;
+    background-color: #fff;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.473);
+    padding: 12px;
 }
 
 main > h1 {
@@ -35,10 +36,12 @@ table.lista tr {
 table.lista td {
     /* border: 1px solid black; */
     padding: 10px;
+    
 }
 
 table.lista tr:nth-child(even) {
-    background-color: f2f2f2;
+    background-color: #ECEDEC;
+    
 }
 
 table.lista td:nth-child(1) {
