--- a/Estudonauta/estilos/stilo.css
+++ b/Estudonauta/estilos/stilo.css
@@ -6,6 +6,8 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+
+
 body {
     background-color: rgba(0, 0, 0, 0.11);
 }
@@ -50,4 +52,26 @@ table.lista td:nth-child(1) {
 
 table.lista td:nth-child(3) {
     width: 90px;
+}
+
+.capa {
+    width: 50px;
+    /* max-width: 50px;
+    padding: 50px;
+    border-radius: 20px; */
+    
+}
+
+table.detalhes {
+    width: 100%;
+    max-width: 800px;
+}
+
+table.detalhes td{
+    padding: 10px;
+    vertical-align: top;
+}
+
+img.full{
+    height: 400px;
 }
